# platform-plugins-interface

./: README.md  meta.yaml  pylintrc  pyproject.toml  setup.py
.github/workflows/: main.yml
builtin/builtin/cm1/: pkg.py
builtin/builtin/darshan/: pkg.py
builtin/builtin/ddmd/: pkg.py
builtin/builtin/dlio_benchmark/: pkg.py
builtin/builtin/filebench/: pkg.py
builtin/builtin/fio/: pkg.py
builtin/builtin/gadget2/: pkg.py
builtin/builtin/gadget2_df/: pkg.py
builtin/builtin/gray_scott/: pkg.py
builtin/builtin/hermes_api_bench/: pkg.py
builtin/builtin/hermes_run/: pkg.py
builtin/builtin/hermes_unit_tests/: pkg.py
builtin/builtin/ior/: pkg.py
builtin/builtin/mkfs/: pkg.py
builtin/builtin/nyx_lya/: pkg.py
builtin/builtin/orangefs/: Dockerfile  README.md  ares.py  custom_kern.py  fuse.py  pkg.py
builtin/builtin/pyflextrkr/: pkg.py
builtin/builtin/pymonitor/: pkg.py
builtin/builtin/redis/: pkg.py
builtin/builtin/redis-benchmark/: pkg.py
builtin/builtin/spark_cluster/: pkg.py
builtin/builtin/ycsbc/: pkg.py
builtin/resource_graph/: delta.yaml
ci/: install_deps.sh  lint.sh  run_tests.sh
jarvis_cd/basic/: jarvis_manager.py  pkg.py
jarvis_cd/installer/: git_node.py
jarvis_cd/template/: app_templ.py  service_templ.py
ppi/: README.md
